http-proxy/http-proxy-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            codec_type: AUTO
            stat_prefix: ingress_http
            route_config:
              name: local_route
              virtual_hosts:
              - name: backend
                domains:
                - "*"
                routes:
                - match:
                    prefix: "/service-1"
                  route:
                    cluster: http-service-1-envoy
                - match:
                    prefix: "/service-2"
                  route:
                    cluster: http-service-2-envoy
                - match:
                    prefix: "/service-3"
                  route:
                    cluster: http-service-3-envoy
            http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: http-service-1-envoy
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: http-service-1-envoy
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: http-service-1-envoy
                  port_value: 8000
    
    - name: http-service-2-envoy
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: http-service-2-envoy
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: http-service-2-envoy
                  port_value: 8000

    - name: http-service-3-envoy
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: http-service-3-envoy
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: http-service-3-envoy
                  port_value: 8000
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9000
#layered_runtime:
  #layers:
  #- name: static_layer_0
    #static_layer:
      #envoy:
        #resource_limits:
          #listener:
            #example_listener_name:
              #connection_limit: 10000
